--- a/TestProjects/ShaderGraph/Packages/manifest.json
+++ b/TestProjects/ShaderGraph/Packages/manifest.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
-    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.ide.rider": "1.1.1",
+    "com.unity.ide.vscode": "1.1.3",
     "com.unity.render-pipelines.core": "file:../../../com.unity.render-pipelines.core",
     "com.unity.render-pipelines.universal": "file:../../../com.unity.render-pipelines.universal",
     "com.unity.shadergraph": "file:../../../com.unity.shadergraph",
-    "com.unity.test-framework": "1.0.12",
+    "com.unity.test-framework": "1.1.5",
     "com.unity.testframework.graphics": "file:../../../com.unity.testframework.graphics",
+    "com.unity.ugui": "1.0.0",
+    "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
@@ -21,6 +24,7 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
   },
+  "disableProjectUpdate": true,
   "testables": [
     "com.unity.shadergraph",
     "com.unity.testframework.graphics"
