--- a/.yamato/upm-ci-shadergraph_stereo.yml
+++ b/.yamato/upm-ci-shadergraph_stereo.yml
@@ -128,14 +128,8 @@ Build_{{ project.name }}_Win_Player_{{ editor.version }}:
 {% endfor %}
 {% endfor %}
 
-All_{{ project.name }}:
-  name: All {{ project.name }} CI
-  agent:
-    type: Unity::VM
-    image: cds-ops/ubuntu-18.04-agent:latest
-    flavor: b1.small
-  commands:
-    - dir
+All_{{ project.name }}_{{ editor.version }}:
+  name: All {{ project.name }} CI - {{ editor.version }}
   dependencies:
   {% for editor in editors %}
   {% for platform in platforms %}
@@ -143,5 +137,17 @@ All_{{ project.name }}:
     - .yamato/upm-ci-{{ project.name | downcase }}.yml#{{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}
   {% endfor %}
   {% endfor %}
+  # {% if editor.version == "fast-trunk" %}
+  # triggers:
+  #   changes:
+  #     only:
+  #       - "com.unity.shadergraph/**/*"
+  #       - "TestProjects/ShaderGraph*/**/*"
+  #       - "com.unity.render-pipelines.universal/Editor/ShaderGraph/*"
+  #     except:
+  #       - "**/*.md"
+  # {% endif %}
+
+{% endfor %}
 {% endfor %}
 {% endfor %}
