--- a/.yamato/upm-ci-hdrp_standalone.yml
+++ b/.yamato/upm-ci-hdrp_standalone.yml
@@ -190,12 +190,6 @@ Build_{{ project.name }}_Win_{{ win_api.name }}_Player_{{ editor.version }}:
 
 All_{{ project.name }}_{{ editor.version }}:
   name: All {{ project.name }} CI - {{ editor.version }}
-  agent:
-    type: Unity::VM
-    image: cds-ops/ubuntu-18.04-agent:latest
-    flavor: b1.small
-  commands:
-    - dir
   dependencies:
   {% for platform in platforms %}
   {% for testplatform in testplatforms %}
@@ -227,6 +221,17 @@ All_{{ project.name }}_{{ editor.version }}:
     
   {% endfor %}
   {% endfor %}
+  # {% if editor.version == "fast-trunk" %}
+  # triggers:
+    # changes:
+      # only:
+        # - "com.unity.render-pipelines.high-definition-config/**/*"
+        # - "com.unity.render-pipelines.high-definition/**/*"
+        # - "com.unity.testing.hdrp/**/*"
+        # - "TestProjects/HDRP*/**/*"
+      # except:
+        # - "**/*.md"
+  # {% endif %}
 
 {% endfor %}   
 {% endfor %}
