--- a/com.unity.render-pipelines.high-definition/Editor/Material/Lit/ShaderGraph/HDLitPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Lit/ShaderGraph/HDLitPass.template
@@ -33,8 +33,17 @@ Pass
     #pragma shader_feature_local _ _BLENDMODE_ALPHA _BLENDMODE_ADD _BLENDMODE_PRE_MULTIPLY
 
     //-------------------------------------------------------------------------------------
+    // Graph Defines
+    //-------------------------------------------------------------------------------------
+    $splice(Defines)
+    //-------------------------------------------------------------------------------------
+    // End Defines
+    //-------------------------------------------------------------------------------------
+
+    //-------------------------------------------------------------------------------------
     // Variant Definitions (active field translations to HDRP defines)
     //-------------------------------------------------------------------------------------
+
     $Material.SubsurfaceScattering:      #define _MATERIAL_FEATURE_SUBSURFACE_SCATTERING 1
     $Material.Transmission:              #define _MATERIAL_FEATURE_TRANSMISSION 1
     $Material.Anisotropy:                #define _MATERIAL_FEATURE_ANISOTROPY 1
@@ -56,9 +65,9 @@ Pass
     $TransparentWritesMotionVec:         #define _WRITE_TRANSPARENT_MOTION_VECTOR 1
     $DepthOffset:                        #define _DEPTHOFFSET_ON 1
     $BlendMode.PreserveSpecular:        #define _BLENDMODE_PRESERVE_SPECULAR_LIGHTING 1
-    $features.NormalDropOffTS:			#define _NORMAL_DROPOFF_SPACE	0
-    $features.NormalDropOffOS:			#define _NORMAL_DROPOFF_SPACE	1
-    $features.NormalDropOffWS:			#define _NORMAL_DROPOFF_SPACE	2
+    $NormalDropOffTS:			#define _NORMAL_DROPOFF_SPACE	0
+    $NormalDropOffOS:			#define _NORMAL_DROPOFF_SPACE	1
+    $NormalDropOffWS:			#define _NORMAL_DROPOFF_SPACE	2
 
     //-------------------------------------------------------------------------------------
     // End Variant Definitions
@@ -81,9 +90,8 @@ Pass
     #include "Packages/com.unity.render-pipelines.high-definition/Runtime/RenderPipeline/ShaderPass/ShaderPass.cs.hlsl"
 
     //-------------------------------------------------------------------------------------
-    // Defines
+    // Active Field Defines
     //-------------------------------------------------------------------------------------
-    $splice(Defines)
 
     // this translates the new dependency tracker into the old preprocessor definitions for the existing HDRP shader code
     $AttributesMesh.normalOS:               #define ATTRIBUTES_NEED_NORMAL
