--- a/com.unity.render-pipelines.high-definition/Editor/Material/PBR/ShaderGraph/HDPBRPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/PBR/ShaderGraph/HDPBRPass.template
@@ -29,8 +29,17 @@ Pass
     #pragma multi_compile _ LOD_FADE_CROSSFADE
 
     //-------------------------------------------------------------------------------------
+    // Graph Defines
+    //-------------------------------------------------------------------------------------
+    $splice(Defines)
+    //-------------------------------------------------------------------------------------
+    // End Defines
+    //-------------------------------------------------------------------------------------
+
+    //-------------------------------------------------------------------------------------
     // Variant Definitions (active field translations to HDRP defines)
     //-------------------------------------------------------------------------------------
+
     $Material.SpecularColor:             #define _MATERIAL_FEATURE_SPECULAR_COLOR 1
     $SurfaceType.Transparent:            #define _SURFACE_TYPE_TRANSPARENT 1
     $BlendMode.Alpha:                    #define _BLENDMODE_ALPHA 1
@@ -57,9 +66,8 @@ Pass
     #include "Packages/com.unity.render-pipelines.high-definition/Runtime/RenderPipeline/ShaderPass/ShaderPass.cs.hlsl"
 
     //-------------------------------------------------------------------------------------
-    // Defines
+    // Active Field Defines
     //-------------------------------------------------------------------------------------
-    $splice(Defines)
 
     // this translates the new dependency tracker into the old preprocessor definitions for the existing HDRP shader code
     $AttributesMesh.normalOS:               #define ATTRIBUTES_NEED_NORMAL
